--- a/Portal.Api/Properties/launchSettings.json
+++ b/Portal.Api/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52873/",
+      "applicationUrl": "http://localhost:52873/swagger",
       "sslPort": 0
     }
   },
